--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <body>
     
 <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-  <a class="navbar-brand" href="#">My vocabulary</a>
+  <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="#">My vocabulary</a>
   <ul class="navbar-nav px-3">
     <li class="nav-item text-nowrap">
       <a class="nav-link" href="#">Home</a>
@@ -59,7 +59,7 @@
 
 <div class="container-fluid">
   <div class="row">
-    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
+    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 ">
       <h2>Section title</h2>
       <div class="table-responsive">
         <table class="table table-striped table-sm">
