--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 <div class="container-fluid">
   <div class="row">
-    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 ">
+    <main role="main">
       <h2>Section title</h2>
       <div class="table-responsive">
         <table class="table table-striped table-sm">
