--- a/index.html
+++ b/index.html
@@ -60,130 +60,129 @@
 <div class="container-fluid">
   <div class="row">
     <main role="main" class="ml-sm-auto col-lg-12 ">
-      <h2>Section title</h2>
+      <h2>Word List</h2>
       <div class="table-responsive">
         <table class="table table-striped table-sm">
           <thead>
             <tr>
               <th>#</th>
-              <th>Header</th>
-              <th>Header</th>
-              <th>Header</th>
-              <th>Header</th>
+              <th>Level</th>
+              <th>Word</th>
+              <th>Meaning</th>
+              <th>Date</th>
+              <th>Menu</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td>1,001</td>
-              <td>random</td>
-              <td>data</td>
-              <td>placeholder</td>
-              <td>text</td>
+              <td>1</td>
+              <td>***</td>
+              <td>superintendent</td>
+              <td>관리자, 감독관</td>
+              <td>2023.10.09</td>
+              <td>
+                <a href="index.html" target="_blank">edit</a>
+                 delete
+              </td>
             </tr>
             <tr>
-              <td>1,002</td>
-              <td>placeholder</td>
-              <td>irrelevant</td>
-              <td>visual</td>
-              <td>layout</td>
+              <td>2</td>
+              <td>**</td>
+              <td>maintenance</td>
+              <td>유지보수</td>
+              <td>2023.10.09</td>
+              <td>
+                <a href="index.html" target="_blank">edit</a>
+                 delete
+              </td>
             </tr>
             <tr>
-              <td>1,003</td>
-              <td>data</td>
-              <td>rich</td>
-              <td>dashboard</td>
-              <td>tabular</td>
+              <td>3</td>
+              <td>*</td>
+              <td>electric</td>
+              <td>전기의, 전기를 생산하는</td>
+              <td>2023.10.09</td>
+              <td>
+                <a href="index.html" target="_blank">edit</a>
+                 delete
+              </td>
             </tr>
             <tr>
-              <td>1,003</td>
-              <td>information</td>
-              <td>placeholder</td>
-              <td>illustrative</td>
-              <td>data</td>
+              <td>4</td>
+              <td>**</td>
+              <td>equipment</td>
+              <td>장비, 용품</td>
+              <td>2023.10.09</td>
+              <td>
+                <a href="index.html" target="_blank">edit</a>
+                 delete
+              </td>
             </tr>
             <tr>
-              <td>1,004</td>
-              <td>text</td>
-              <td>random</td>
-              <td>layout</td>
-              <td>dashboard</td>
+              <td>5</td>
+              <td>*</td>
+              <td>pole</td>
+              <td>기둥, 장대</td>
+              <td>2023.10.09</td>
+              <td>
+                <a href="index.html" target="_blank">edit</a>
+                 delete
+              </td>
             </tr>
             <tr>
-              <td>1,005</td>
-              <td>dashboard</td>
-              <td>irrelevant</td>
-              <td>text</td>
-              <td>placeholder</td>
+              <td>6</td>
+              <td>*</td>
+              <td>formerly</td>
+              <td>이전에, 예전에</td>
+              <td>2023.10.09</td>
+              <td>
+                <a href="index.html" target="_blank">edit</a>
+                 delete
+              </td>
             </tr>
             <tr>
-              <td>1,006</td>
-              <td>dashboard</td>
-              <td>illustrative</td>
-              <td>rich</td>
-              <td>data</td>
+              <td>7</td>
+              <td>*</td>
+              <td>transfer</td>
+              <td>옮기다, 이동하다</td>
+              <td>2023.10.09</td>
+              <td>
+                <a href="index.html" target="_blank">edit</a>
+                 delete
+              </td>
             </tr>
             <tr>
-              <td>1,007</td>
-              <td>placeholder</td>
-              <td>tabular</td>
-              <td>information</td>
-              <td>irrelevant</td>
+              <td>8</td>
+              <td>**</td>
+              <td>executive</td>
+              <td>경영 간부, 임원</td>
+              <td>2023.10.09</td>
+              <td>
+                <a href="index.html" target="_blank">edit</a>
+                 delete
+              </td>
             </tr>
             <tr>
-              <td>1,008</td>
-              <td>random</td>
-              <td>data</td>
-              <td>placeholder</td>
-              <td>text</td>
+              <td>9</td>
+              <td>*</td>
+              <td>assure</td>
+              <td>안심시키다, 확신시키다</td>
+              <td>2023.10.09</td>
+              <td>
+                <a href="index.html" target="_blank">edit</a>
+                 delete
+              </td>
             </tr>
             <tr>
-              <td>1,009</td>
-              <td>placeholder</td>
-              <td>irrelevant</td>
-              <td>visual</td>
-              <td>layout</td>
-            </tr>
-            <tr>
-              <td>1,010</td>
-              <td>data</td>
-              <td>rich</td>
-              <td>dashboard</td>
-              <td>tabular</td>
-            </tr>
-            <tr>
-              <td>1,011</td>
-              <td>information</td>
-              <td>placeholder</td>
-              <td>illustrative</td>
-              <td>data</td>
-            </tr>
-            <tr>
-              <td>1,012</td>
-              <td>text</td>
-              <td>placeholder</td>
-              <td>layout</td>
-              <td>dashboard</td>
-            </tr>
-            <tr>
-              <td>1,013</td>
-              <td>dashboard</td>
-              <td>irrelevant</td>
-              <td>text</td>
-              <td>visual</td>
-            </tr>
-            <tr>
-              <td>1,014</td>
-              <td>dashboard</td>
-              <td>illustrative</td>
-              <td>rich</td>
-              <td>data</td>
-            </tr>
-            <tr>
-              <td>1,015</td>
-              <td>random</td>
-              <td>tabular</td>
-              <td>information</td>
-              <td>text</td>
+              <td>10</td>
+              <td>*</td>
+              <td>transfer</td>
+              <td>옮기다, 이동하다</td>
+              <td>2023.10.09</td>
+              <td>
+                <a href="index.html" target="_blank">edit</a>
+                 delete
+              </td>
             </tr>
           </tbody>
         </table>
