--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <td>관리자, 감독관</td>
               <td>2023.10.09</td>
               <td>
-                <a href="index.html" target="_blank">edit</a>
+                <a href="edit.html" target="_blank">edit</a>
                  delete
               </td>
             </tr>
@@ -92,7 +92,7 @@
               <td>유지보수</td>
               <td>2023.10.09</td>
               <td>
-                <a href="index.html" target="_blank">edit</a>
+                <a href="edit.html" target="_blank">edit</a>
                  delete
               </td>
             </tr>
@@ -103,7 +103,7 @@
               <td>전기의, 전기를 생산하는</td>
               <td>2023.10.09</td>
               <td>
-                <a href="index.html" target="_blank">edit</a>
+                <a href="edit.html" target="_blank">edit</a>
                  delete
               </td>
             </tr>
@@ -114,7 +114,7 @@
               <td>장비, 용품</td>
               <td>2023.10.09</td>
               <td>
-                <a href="index.html" target="_blank">edit</a>
+                <a href="edit.html" target="_blank">edit</a>
                  delete
               </td>
             </tr>
@@ -125,7 +125,7 @@
               <td>기둥, 장대</td>
               <td>2023.10.09</td>
               <td>
-                <a href="index.html" target="_blank">edit</a>
+                <a href="edit.html" target="_blank">edit</a>
                  delete
               </td>
             </tr>
@@ -136,7 +136,7 @@
               <td>이전에, 예전에</td>
               <td>2023.10.09</td>
               <td>
-                <a href="index.html" target="_blank">edit</a>
+                <a href="edit.html" target="_blank">edit</a>
                  delete
               </td>
             </tr>
@@ -147,7 +147,7 @@
               <td>옮기다, 이동하다</td>
               <td>2023.10.09</td>
               <td>
-                <a href="index.html" target="_blank">edit</a>
+                <a href="edit.html" target="_blank">edit</a>
                  delete
               </td>
             </tr>
@@ -158,7 +158,7 @@
               <td>경영 간부, 임원</td>
               <td>2023.10.09</td>
               <td>
-                <a href="index.html" target="_blank">edit</a>
+                <a href="edit.html" target="_blank">edit</a>
                  delete
               </td>
             </tr>
@@ -169,7 +169,7 @@
               <td>안심시키다, 확신시키다</td>
               <td>2023.10.09</td>
               <td>
-                <a href="index.html" target="_blank">edit</a>
+                <a href="edit.html" target="_blank">edit</a>
                  delete
               </td>
             </tr>
@@ -180,7 +180,7 @@
               <td>옮기다, 이동하다</td>
               <td>2023.10.09</td>
               <td>
-                <a href="index.html" target="_blank">edit</a>
+                <a href="edit.html" target="_blank">edit</a>
                  delete
               </td>
             </tr>
