--- a/index.html
+++ b/index.html
@@ -29,28 +29,50 @@
 
     <!-- Custom styles for this template -->
     <link href="dashboard.css" rel="stylesheet">
+  
+    <style> 
+      input[type=text] {
+        width: 25%;
+        box-sizing: border-box;
+        border: 2px solid #ccc;
+        border-radius: 4px;
+        font-size: 12px;
+        background-color: white;
+        background-image: url('searchicon.png');
+        background-position: 10px 10px; 
+        background-repeat: no-repeat;
+        padding: 12px 20px 12px 40px;
+      }
+      select {
+         width: 25%;
+         padding: 16px 20px;
+         border: none;
+         border-radius: 4px;
+         background-color: #f1f1f1;
+      }
+      </style>
   </head>
 
   <body>
     
 <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
   <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="#">My vocabulary</a>
-  <ul>
+  <ul class="navbar-nav px-3">
     <li class="nav-item text-nowrap">
       <a class="nav-link" href="#">Home</a>
     </li>
   </ul>
-  <ul>
+  <ul class="navbar-nav px-3">
     <li class="nav-item text-nowrap">
       <a class="nav-link" href="#">NoStyle</a>
     </li>
   </ul>
-  <ul>
+  <ul class="navbar-nav px-3">
     <li class="nav-item text-nowrap">
       <a class="nav-link" href="#">Example</a>
     </li>
   </ul>
-  <ul>
+  <ul class="navbar-nav px-3">
     <li class="nav-item text-nowrap">
       <a class="nav-link" href="#">About</a>
     </li>
@@ -60,7 +82,19 @@
 <div class="container-fluid">
   <div class="row">
     <main role="main" class="ml-sm-auto col-lg-12 ">
-      <h2>Word List</h2>
+      <h2>Word List
+        <form>
+          <select id="country" name="select level">
+          <option value="easy">*</option>
+          <option value="normal">**</option>
+          <option value="hard">***</option>
+          </select>
+        </form>
+        <form>
+          <input type="text" name="search" placeholder="Search..">
+        </form>
+        <input type="button" value="Button">
+      </h2>
       <div class="table-responsive">
         <table class="table table-striped table-sm">
           <thead>
