--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
          border-radius: 4px;
          background-color: #f1f1f1;
       }
+      input[type=button]{
+       background-color: #04AA6D;
+       border: none;
+       color: white;
+       padding: 16px 32px;
+       text-decoration: none;
+       margin: 4px 2px;
+       cursor: pointer;
+      }
       </style>
   </head>
 
