--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
          width: 25%;
          padding: 8px 10px;
          border: none;
+         font-size: 12px;
          border-radius: 4px;
          background-color: #f1f1f1;
       }
@@ -55,6 +56,7 @@
        border: none;
        color: white;
        padding: 8px 16px;
+       font-size: 12px;
        text-decoration: none;
        margin: 4px 2px;
        cursor: pointer;
