--- a/index.html
+++ b/index.html
@@ -96,7 +96,10 @@
 <div class="container-fluid">
   <div class="row">
     <main role="main" class="ml-sm-auto col-lg-12 ">
-      <h2>Word List
+      <div style="float: left">
+        <h2>Word List</h2>
+      </div>
+      <div style="float: right;">
         <form>
           <select id="country" name="select level">
           <option value="easy">*</option>
@@ -106,7 +109,7 @@
           <input type="text" name="search" placeholder="Search..">
           <input type="button" value="Button">
         </form>
-      </h2>
+      </div>
       <div class="table-responsive">
         <table class="table table-striped table-sm">
           <thead>
