--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
        padding: 8px 16px;
        font-size: 12px;
        text-decoration: none;
+       border-radius: 4px;
+       margin: 4px 2px;
        cursor: pointer;
       }
       </style>
@@ -100,7 +102,7 @@
       </div>
       <div style="float: right;">
         <form>
-          <select id="country" name="select level">
+          <select id="country" name="select level">select level</select>
           <option value="easy">*</option>
           <option value="normal">**</option>
           <option value="hard">***</option>
