--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </div>
       <div style="float: right;">
         <form>
-          <select id="country" name="select level">select level</select>
+          <select id="country" name="select level">
           <option value="easy">*</option>
           <option value="normal">**</option>
           <option value="hard">***</option>
