--- a/index.html
+++ b/index.html
@@ -96,19 +96,23 @@
 <div class="container-fluid">
   <div class="row">
     <main role="main" class="ml-sm-auto col-lg-12 ">
-      <div style="float: left">
-        <h2>Word List</h2>
-      </div>
-      <div style="float: right;">
-        <form>
-          <select id="country" name="select level">
-          <option value="easy">*</option>
-          <option value="normal">**</option>
-          <option value="hard">***</option>
-          </select>
-          <input type="text" name="search" placeholder="Search..">
-          <input type="button" value="Button">
-        </form>
+      <table width="100%" style="text-align:center; border:none">
+        <tr>
+            <td width:20%"><h2>Word List</h2></td>
+            <td style="text-align:right">
+              <form>
+                <select id="country" name="select level">
+                <option value="easy">*</option>
+                <option value="normal">**</option>
+                <option value="hard">***</option>
+                </select>
+                <input type="text" name="search" placeholder="Search..">
+                <input type="button" value="Button">
+              </form>
+            </td>
+        </tr>
+      </table>
+
       </div>
       <div class="table-responsive">
         <table class="table table-striped table-sm">
