--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <main role="main" class="ml-sm-auto col-lg-12 ">
       <table width="100%" style="text-align:center; border:none">
         <tr>
-            <td width:20%"><h2>Word List</h2></td>
+            <td style="width:20%; text-align:left"><h2>Word List</h2></td>
             <td style="text-align:right">
               <form>
                 <select id="country" name="select level">
