--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <td style="width:20%; text-align:left"><h2>Word List</h2></td>
             <td style="text-align:right">
               <form>
-                <select id="country" name="select level">
+                <select id="select level" name="select level">
                 <option value="easy">*</option>
                 <option value="normal">**</option>
                 <option value="hard">***</option>
