--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
             <td style="text-align:right">
               <form>
                 <select id="select level" name="select level">
+                <option value="select level">select level</option>
                 <option value="easy">*</option>
                 <option value="normal">**</option>
                 <option value="hard">***</option>
