--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   
     <style> 
       input[type=text] {
-        width: 25%;
+        width: 15%;
         box-sizing: border-box;
         border: 2px solid #ccc;
         border-radius: 4px;
@@ -47,24 +47,14 @@
         padding: 6px 12px 6px 20px;
       }
       select {
-         width: 25%;
+         width: 15%;
          padding: 8px 10px;
          border: none;
          font-size: 12px;
          border-radius: 4px;
          background-color: #f1f1f1;
       }
-      input[type=button2]{
-       background-color: white;
-       border: none;
-       color: black;
-       padding: 8px 16px;
-       font-size: 12px;
-       text-decoration: none;
-       margin: 4px 2px;
-       cursor: pointer;
-      }
-      input[type=button2]{
+      input[type=button]{
        background-color: #04AA6D;
        border: none;
        color: white;
@@ -111,15 +101,15 @@
             <td style="width:20%; text-align:left"><h2>Word List</h2></td>
             <td style="text-align:right">
               <form>
-                <select id="select level" name="select level" placeholder="Search..">
-                <option value="all">show all</option>
+                <select id="select level" name="select level">
+                <option value="all">select level</option>
                 <option value="easy">*</option>
                 <option value="normal">**</option>
                 <option value="hard">***</option>
                 </select>
                 <input type="text" name="search" placeholder="Search..">
-                <input type="button1" value="Search">
-                <input type="button2" value="Add">
+                <input type="button" background-color="white" color="black" value="Search">
+                <input type="button" background-color="#04AA6D" color="white" value="Add">
               </form>
             </td>
         </tr>
