--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
          border-radius: 4px;
          background-color: #f1f1f1;
       }
-      input[type=button]{
-       background-color: #04AA6D;
+      .button{
        border: none;
-       color: white;
        padding: 8px 8px;
        font-size: 12px;
        text-decoration: none;
        margin: 4px 2px;
        cursor: pointer;
       }
+      .button1{background-color: #04AA6D; color: white;}
+      .button2{background-color: white; color: black;}
       </style>
   </head>
 
@@ -108,8 +108,8 @@
                 <option value="hard">***</option>
                 </select>
                 <input type="text" name="search" placeholder="Search..">
-                <input type="button" background-color="white" color="black" value="Search">
-                <input type="button" background-color="#04AA6D" color="white" value="Add">
+                <input type="button1" value="Search">
+                <input type="button2" value="Add">
               </form>
             </td>
         </tr>
