--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                 <option value="hard">***</option>
                 </select>
                 <input type="text" name="search" placeholder="Search..">
-                <button class="button1" value="Search">
-                <button class="button2" value="Add">
+                <input type="button" value="Search">
+                <input type="button" value="Add">
               </form>
             </td>
         </tr>
