--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                 <option value="hard">***</option>
                 </select>
                 <input type="text" name="search" placeholder="Search..">
-                <button type="button button2" value="Search">
-                <button type="button button1" value="Add">
+                <button type="button button2">Search</button>
+                <button type="button button1">Add</button>
               </form>
             </td>
         </tr>
