--- a/index.html
+++ b/index.html
@@ -54,16 +54,21 @@
          border-radius: 4px;
          background-color: #f1f1f1;
       }
-      .button{
-       border: none;
-       padding: 8px 8px;
-       font-size: 12px;
-       text-decoration: none;
-       margin: 4px 2px;
-       cursor: pointer;
-      }
-      .button1{background-color: #04AA6D; color: white;}
-      .button2{background-color: white; color: black;}
+      .button {
+        background-color: #4CAF50; /* Green */
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        }
+
+      .button2 {background-color: white; color:black} /* white */
+
       </style>
   </head>
 
@@ -109,7 +114,7 @@
                 </select>
                 <input type="text" name="search" placeholder="Search..">
                 <button type="button button2">Search</button>
-                <button type="button button1">Add</button>
+                <button type="button">Add</button>
               </form>
             </td>
         </tr>
