--- a/index.html
+++ b/index.html
@@ -54,21 +54,16 @@
          border-radius: 4px;
          background-color: #f1f1f1;
       }
-      .button {
-        background-color: #4CAF50; /* Green */
-        border: none;
-        color: white;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        margin: 4px 2px;
-        cursor: pointer;
-        }
-
-      .button2 {background-color: white; color:black} /* white */
-
+      input[type=button]{
+       background-color: #04AA6D;
+       border: none;
+       color: white;
+       padding: 8px 8px;
+       font-size: 12px;
+       text-decoration: none;
+       margin: 4px 2px;
+       cursor: pointer;
+      }
       </style>
   </head>
 
@@ -113,8 +108,8 @@
                 <option value="hard">***</option>
                 </select>
                 <input type="text" name="search" placeholder="Search..">
-                <button type="button button2">Search</button>
-                <button type="button">Add</button>
+                <input type="button" value="Search">
+                <input type="button" value="Add">
               </form>
             </td>
         </tr>
