--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
          border-radius: 4px;
          background-color: #f1f1f1;
       }
-      input[type=button]{
+      button {
        background-color: #04AA6D;
        border: none;
        color: white;
@@ -108,8 +108,8 @@
                 <option value="hard">***</option>
                 </select>
                 <input type="text" name="search" placeholder="Search..">
-                <input type="button" value="Search">
-                <input type="button" value="Add">
+                <button style="background-color: white; color: black; border: 1px solid black" value="Search">Search</button>
+                <button value="Add">Add</button>
               </form>
             </td>
         </tr>
