--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 </select>
                 <input type="text" name="search" placeholder="Search..">
                 <button style="background-color: white; color: black; border: 1px solid black" value="Search">Search</button>
-                <button value="Add">Add</button>
+                <button type="button" onclick="location.href='add.html'">Add</button>
               </form>
             </td>
         </tr>
@@ -129,7 +129,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
+            <tr class="clickable" onclick="location.href='view.html?studentno=21800123&name=이주안&sex=남&department=상담심리사회복지학부&&birth=99.07.30&&mbti=ENFP&&phoneno=010-1234-5678&&email=juan0730@handong.ac.kr'">
               <td>1</td>
               <td>***</td>
               <td>superintendent</td>
