--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr class="clickable" onclick="location.href='view.html?studentno=21800123&name=이주안&sex=남&department=상담심리사회복지학부&&birth=99.07.30&&mbti=ENFP&&phoneno=010-1234-5678&&email=juan0730@handong.ac.kr'">
+            <tr class="clickable" onclick="location.href='view.html?level=***&word=superintendent&meaning=관리자, 감독관&date=2023.10.09'">
               <td>1</td>
               <td>***</td>
               <td>superintendent</td>
