--- a/view.html
+++ b/view.html
@@ -37,7 +37,7 @@
     </head>
     
   <body id="view-page">
-    <h3><sapn id="word"></sapn> word infomation.</h3>
+    <h3>  Word Infomation.</h3>
 
     <table id="wordInfomation">
       <tr><td>Level</td><td id="level"></td></tr>
@@ -46,7 +46,7 @@
       <tr><td>Date</td><td id="date"></td></tr>
     </table>
     <div class="button-container" id="btnContainer">
-      <button onclick="editStudentInfo()">Edit</button>
+      <button onclick="editWord()">Edit</button>
       <button onclick="confirmDelete()">Delete</button>
 
     <div class="button-container" id="btnContainer"></div>
