--- a/edit.html
+++ b/edit.html
@@ -1,19 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="my.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>Edit Student Information</title>
-
-    <!-- 제목 스타일 -->
-    <style>
-      h3 {
-        margin-left: 20px;
-        font-size: 25px;
-        font-weight: bold;
-      }
-    </style>
+    <title>Edit Word Information</title>
 
     <!-- 표 스타일 -->
     <style>
@@ -42,21 +30,19 @@
 
 <body id="edit-page">
 
-  <h3><sapn id="name"></sapn> 학부생 Info.</h3>
+  <h3>Edit Word Info.</h3>
 
-  <table id="studentInfo">
-    <tr><td>학번</td><td><input class="input-field" type="text" id="studentNo"></td></tr>
-    <tr><td>성별</td><td>
-      <select id="sex" th:field="*{sex}">
-      <option value="">성별을 선택하세요</option>
-      <option value="남">남</option>
-      <option value="여">여</option>
-  </select></td></tr>
-    <tr><td>학부</td><td><input class="input-field" type="text" id="department"></td></tr>
-    <tr><td>생년월일</td><td><input class="input-field" type="text" id="birth"></td></tr>
-    <tr><td>MBTI</td><td><input class="input-field" type="text" id="mbti"></td></tr>
-    <tr><td>전화번호</td><td><input class="input-field" type="text" id="phoneno"></td></tr>
-    <tr><td>E-mail</td><td><input class="input-field" type="text" id="email"></td></tr>
+  <table id="wordInformation">
+    <tr><td>Level</td><td>
+      <select id="level" th:field="*{level}">
+      <option value="">choose level</option>
+      <option value="*">*</option>
+      <option value="**">**</option>
+      <option value="***">***</option>
+      </select></td></tr>
+    <tr><td>Word</td><td><input class="input-field" type="text" id="word"></td></tr>
+    <tr><td>Meaning</td><td><input class="input-field" type="text" id="meaning"></td></tr>
+    <tr><td>date</td><td><input class="input-field" type="date" id="date" name="update date"></td></tr>
   </table>
 
 <div class="button-container" id="btnContainer">
@@ -66,11 +52,11 @@
 <script type="text/javascript">
 
   function confirmEdit(){
-    var studentNo = document.getElementById("studentNo").value;
-    var sex = document.getElementById("sex").value;
-    var department = document.getElementById("department").value;
+    var level = document.getElementById("level").value;
+    var word = document.getElementById("word").value;
+    var meaning = document.getElementById("meaning").value;
 
-    if (!studentNo || !sex || !department) {
+    if (!level || !word || !meaning) {
         alert('학번, 성별, 학부는 반드시 입력해야 합니다.');
         return;
     }
@@ -83,7 +69,7 @@
   // 테이블의 가운데에 버튼을 맞추는 함수
   function alignButtons() {
 
-  const tableWidth = document.getElementById('studentInfo').offsetWidth; // 테이블의 너비를 가져옵니다.
+  const tableWidth = document.getElementById('wordInformation').offsetWidth; // 테이블의 너비를 가져옵니다.
   const btnContainer = document.getElementById('btnContainer'); // 버튼 컨테이너를 가져옵니다.
 
   btnContainer.style.width = `${tableWidth}px`; // 버튼 컨테이너의 너비를 테이블과 같게 설정합니다.
@@ -93,14 +79,10 @@
 
   window.onload = function() {
     const urlParams = new URLSearchParams(window.location.search);
-    document.getElementById("studentNo").value = urlParams.get('studentno');
-    document.getElementById("name").innerText = urlParams.get('name');
-    document.getElementById("sex").value = urlParams.get('sex');
-    document.getElementById("department").value = urlParams.get('department');
-    document.getElementById("birth").value = urlParams.get('birth');
-    document.getElementById("mbti").value = urlParams.get('mbti');
-    document.getElementById("phoneno").value = urlParams.get('phoneno');
-    document.getElementById("email").value = urlParams.get('email');
+    document.getElementById("level").value = urlParams.get('level');
+    document.getElementById("word").innerText = urlParams.get('word');
+    document.getElementById("meaning").value = urlParams.get('meaning');
+    document.getElementById("date").value = urlParams.get('date');
 
   alignButtons(); // 페이지 로드 시 버튼 위치 조정
 
